--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>Welcome to my portfolio website! I am constantly seeking opportunities to learn and grow in this ever-evolving field</p>
             
             <div class="btn-group">
-                <a href="files/SowndharResume.pdf" class="btn   active">Download CV</a>
+                <a href="files/MatheshResume.pdf" class="btn   active">Download CV</a>
                 <a href="mailto:matheshk96@gmail.com" class="btn">Contact</a>
             </div>
 
